<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".search">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="39dp"
                android:layout_height="41dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_toolbar"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_toolbar" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                app:srcCompat="@drawable/ic_home_black_24dp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <EditText
        android:id="@+id/edit_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/edit_search"
        android:ems="10"
        android:hint="@string/edit_search"
        android:inputType="textWebEditText|textPersonName" />

    <TextView
        android:id="@+id/txt_view_arancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/txt_arancel"
        android:text="@string/txt_arancel"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:fontFamily="sans-serif-black" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="42dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/darker_gray"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ListView
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="325dp"
        android:layout_height="384dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="183dp" />


</RelativeLayout>