<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".menu">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_toolbar"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />

            <Space
                android:layout_width="199dp"
                android:layout_height="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_toolbar" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/txt_salir"
                android:paddingTop="8dp"
                android:text="@string/txt_salir"
                android:textSize="30sp"
                android:typeface="sans"
                app:fontFamily="sans-serif-medium"
                tools:text="@string/txt_salir" />

            <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/txt_salir"
                app:srcCompat="@drawable/logout" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="358dp"
        android:layout_height="523dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        app:srcCompat="@drawable/shield" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="152dp"
        android:gravity="center"
        android:text="@string/txt_contenido"
        android:textAllCaps="true"
        android:textSize="36sp"
        app:fontFamily="sans-serif-black" />

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/seccion1"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:focusable="auto"
            android:gravity="center"
            android:onClick="onTema"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/btn-tutorial"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/txt_tema"
                android:onClick="onTema"
                app:srcCompat="@drawable/tema" />

            <TextView
                android:id="@+id/text-menu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_tema"
                android:textAllCaps="true"
                android:textIsSelectable="false"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seccion2"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:focusable="auto"
            android:gravity="center"
            android:onClick="onPractica"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/btn-practica"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/txt_practica"
                android:onClick="onPractica"
                app:srcCompat="@drawable/practica" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_practica"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seccion3"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:focusable="auto"
            android:gravity="center"
            android:onClick="onArancel"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/btn-arancel"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/txt_arancel"
                android:onClick="onArancel"
                app:srcCompat="@drawable/arancel" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_arancel"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>